[Freestyler] Fix UI on small viewport
Still some issues on the smallest viewport

Bug: 349057581
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5665556
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -15,8 +15,10 @@
 }
 
 .chat-ui {
+  box-sizing: border-box;
   width: 100%;
   margin-top: var(--sys-size-6);
+  padding: 0 var(--sys-size-8);
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -26,7 +28,7 @@
   margin-top: auto;
   display: flex;
   flex-direction: column;
-  padding-top: var(--sys-size-8);
+  padding: var(--sys-size-8) var(--sys-size-8) 0;
   margin-bottom: var(--sys-size-4);
   max-width: 100%;
 }
